# aiogram_lessons

./: .gitignore  main.py  pyproject.toml
lesson1/: bot.py
lesson1_1/: __init__.py  bot.py
lesson2/: bot.py
